--- a/index-circle.html
+++ b/index-circle.html
@@ -134,6 +134,10 @@
         <h1>Hogwarts Legacy Semi-Canonical Character Relationships Circle Chart</h1>
         <a href="index.html">Square View</a>
         <a href="index-circle.html">Circle View</a>
+        <p>
+          <img src="https://thevalshae.goatcounter.com/count?p=/socialPage-circle" alt="" />
+        </p>
+
         
         <div id="legend" style="background: white; border-radius: 12px; padding: 20px; margin-bottom: 20px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
             <h3 style="margin: 0 0 15px 0; color: #374151; font-size: 18px;">Relationship Types</h3>
@@ -247,4 +251,5 @@
 
     <script src="main-circle.js"></script>
 </body>
+
 </html>
