--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <h1>Hogwarts Social Network Visualization</h1>
         <a href="index-circle.html">Circle View</a>
         <a href="index.html">Square View</a>
+        <p>
+          <img src="https://thevalshae.goatcounter.com/count?p=/socialPage-square" alt="" />
+        </p>
         <div id="controls">
             <p><strong>Data files:</strong> Place relationships.csv, social.json, and characters.json in the same folder as this HTML file.</p>
             <div class="info">
@@ -104,4 +107,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
